# rosu-skin

./: Cargo.toml  build.rs  readme.md
assets/: Cantarella.ini  bluchoco.ini
res/: default.xml  resources.xml
src/: lib.rs  main.rs
src/decode/: colours.rs  ctb.rs  font.rs  general.rs  mania.rs  mod.rs
src/structs/: colours.rs  common.rs  font.rs  general.rs  mod.rs
src/structs/gamemode/: ctb.rs  mania.rs  mod.rs
