[package]
name = "rosu-skin"
version = "0.3.0"
edition = "2021"
description = "A Rust library for parsing osu! skin.ini files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Glubus/rosu-skin"
authors = ["Glubus"]
[lib]
name = "rosu_skin"
path = "src/lib.rs"

[[bin]]
name = "rosu-skin"
path = "src/main.rs"

[dependencies]
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive"] }
r-resources = "0.7.5"

[build-dependencies]
r-resources = "0.7.5"
